structured the files

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,6 +6,7 @@
       "@components/*": ["./components/*"],
       "@utils/*": ["./utils/*"],
       "@models/*": ["./models/*"],
+      "@constants/*": ["./constants/*"],
     }
   }
 }
