--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
       "@components/*": ["./components/*"],
       "@utils/*": ["./utils/*"],
       "@models/*": ["./models/*"],
+      "@constants/*": ["./constants/*"],
+
     },
     "allowJs": true,
     "skipLibCheck": true,
